--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ body {
     flex-wrap: wrap;
     min-height: 10%;
     color: white;
+    margin-left: 40px;
 }
 
 .dropdown-menu .logo {
@@ -51,6 +52,7 @@ body {
 .btn-menu:hover:not(.logo) {
     border-radius: 20px;
     background-color: #00BCD4;
+    box-shadow: 3px 3px 20px #00BCD4;
     color: white;
     opacity: 0.9;
 }
@@ -86,13 +88,13 @@ Vamos con el inicio
     background-color: #00BCD4;
     margin-top: 20px;
     min-height:60%;
-    width: 90%;
+    width: 100%;
     color: #000;
-    border: 1px solid white;
     border-radius: 20px;
     box-shadow: 5px 5px 25px 0px black;
     text-align: center;
     align-content: center;
+    box-shadow: 3px 3px 20px #00BCD4;
 }
 .sub-data-me{
     color: white;
@@ -100,7 +102,8 @@ Vamos con el inicio
     text-align: center;
     align-content: center;
     border: 2px solid #00BCD4;
-    width: 90%;
+    box-shadow: 3px 3px 20px #00BCD4;
+    width: 100%;
     border-radius: 20px;
 }
 .sub-data-me .btn-me{
@@ -109,6 +112,7 @@ Vamos con el inicio
     padding: 20px;
     border-radius: 10px;
     background-color: #4ECDC4;
+    box-shadow: 3px 3px 20px #4ECDC4;
 }
 .sub-data-me .btn-me-two{
     margin: 20px;
@@ -121,22 +125,59 @@ Vamos con el inicio
 }
 .btn-me-two:hover{
     background-color: #4ECDC4;
-    color: black;
+    color: white;
+    box-shadow: 3px 3px 20px #4ECDC4;
+    transition:background-color 0.3s ease-in;
 }
 /*================================================================
 SOBRE MI
 ==================================================================*/
+#recorrido{
+    flex-direction: column;
+    align-items: center;
+    /*Minimo 100% de altura*/
+    min-height: 100%;
+    height: 100%;
+    padding: 20px;
+    overflow-y: auto;
+    /*Ocultamos la barra del scroll*/
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+/*Ocultamos la barra de scroll*/
+#recorrido::-webkit-scrollbar {
+    display: none;
+}
+/**/
+.about-me{
+    align-content: center;
+    box-shadow: 3px 3px 20px #4ECDC4;
+    min-height: 50%;
+    width: 100%;
+    height: 50%;
+    margin-top: 20px;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    text-align:justify;
+    border-radius: 10px;
+    background-color: #00BCD4;
+    color: white;
+    background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="%2300BCD4" fill-opacity="1" d="M0,128L40,112C80,96,160,64,240,53.3C320,43,400,53,480,80C560,107,640,149,720,165.3C800,181,880,171,960,186.7C1040,203,1120,245,1200,261.3C1280,277,1360,267,1400,261.3L1440,256L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z"></path></svg>') no-repeat;
+    background-size: cover;
+    background-position: top;
 
+}
 /*================================================================
  Aca va la parte del footer
 ==================================================================*/
 .footer {
     margin: auto;
-    min-height: 15%;
+    min-height: 25%;
     border-radius: 20px;
     color: white;
     margin-top: 20px;
     background-color: #00BCD4;
     opacity: 0.9;
-    width: 95%;
+    width: 100%;
 }
